--- a/JenkinsFile
+++ b/JenkinsFile
@@ -47,14 +47,15 @@ pipeline {
 
         stage('Push Docker Image') {
             steps {
+                // FIX: Used '#' for comments and corrected syntax for secure login/push
                 sh """
-                // Secure login to Docker Hub using stored credentials
-                echo "$DOCKERHUB_CREDENTIALS_PSW" | docker login -u "$DOCKERHUB_CREDENTIALS_USR" --password-stdin
+                # Secure login to Docker Hub using stored credentials
+                echo "${DOCKERHUB_CREDENTIALS_PSW}" | docker login -u "${DOCKERHUB_CREDENTIALS_USR}" --password-stdin
 
-                // Push the image
-                docker push $DOCKER_IMAGE:$DOCKER_TAG
+                # Push the image
+                docker push ${DOCKER_IMAGE}:${DOCKER_TAG}
 
-                // Log out for security
+                # Log out for security
                 docker logout
                 """
             }
