--- a/Infra/deploy.yml
+++ b/Infra/deploy.yml
@@ -1,7 +1,8 @@
 ---
 - name: Deploy Scientific Calculator Docker Container
   hosts: local
-  become: yes # Run with root privileges, necessary for docker commands
+  # This requires the 'jenkins' user to have NOPASSWD access in /etc/sudoers to run Docker commands as root
+  become: yes
 
   vars:
     # IMPORTANT: The image name MUST match the one defined in your Jenkinsfile
@@ -9,16 +10,17 @@
     container_name: "scientific_calculator_app"
 
   tasks:
-    - name: Ensure Docker is installed (if needed)
-      package:
-        name: docker.io
+    - name: Ensure Python Docker module is installed
+      pip:
+        name: docker
         state: present
 
     - name: Stop and remove existing container (if running)
+      # Use the fully qualified collection name for the docker_container module
       community.docker.docker_container:
         name: "{{ container_name }}"
         state: absent
-      ignore_errors: yes # Ignore errors if the container doesn't exist yet
+      ignore_errors: yes
 
     - name: Pull the latest Docker image from Docker Hub
       community.docker.docker_image:
@@ -30,5 +32,9 @@
         name: "{{ container_name }}"
         image: "{{ app_image }}"
         state: started
-        # This app is command-line only, so no port mapping is strictly needed,
-        # but the container should start and execute the Main class.
+        # Detach the container so the Jenkins job can finish
+        detach: true
+        # The app is command-line only; it will run the entrypoint (Main class)
+        # and exit after execution unless in an interactive environment.
+        # For continuous running CLI, you'd use a loop in the Entrypoint/CMD,
+        # but for this assignment, a started container is sufficient.
