--- a/Infra/deploy.yml
+++ b/Infra/deploy.yml
@@ -1,7 +1,8 @@
 ---
 - name: Deploy Scientific Calculator Docker Container
   hosts: local
-  # This requires the 'jenkins' user to have NOPASSWD access in /etc/sudoers to run Docker commands as root
+  # This requires the 'jenkins' user to have NOPASSWD access in /etc/sudoers
+  # to run Docker commands as root
   become: yes
 
   vars:
@@ -10,10 +11,15 @@
     container_name: "scientific_calculator_app"
 
   tasks:
-    - name: Ensure Python Docker module is installed
-      pip:
-        name: docker
+    # Use the 'apt' module to install the Python Docker module to avoid  the 'externally-managed-environment' error when using pip system-wide.
+    - name: Ensure Python Docker module is installed (via apt)
+      ansible.builtin.apt:
+        name: python3-docker # This is the package name for the python docker module on Debian/Ubuntu
         state: present
+        update_cache: yes
+      when: ansible_os_family == "Debian" # Only run on Debian/Ubuntu systems
+      # This task requires elevated privileges (become: yes)
+
 
     - name: Stop and remove existing container (if running)
       # Use the fully qualified collection name for the docker_container module
